# FairMQ

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .gitlint  .gitmodules  .zenodo.json  AUTHORS  CMakeGraphVizOptions.cmake  CMakeLists.txt  CONTRIBUTORS  COPYRIGHT  CTestConfig.cmake  Dart.sh  FairMQTest.cmake  Jenkinsfile  Jenkinsfile.nightly  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  codemeta.json  codemeta_update.py  latest  main.cpp  meta_update.py  readme.md  spack.yaml
examples/: CMakeLists.txt  README.md
examples/1-1/: CMakeLists.txt  README.md  Sampler.cxx  Sampler.h  Sink.cxx  Sink.h  fairmq-start-ex-1-1.sh.in  runSampler.cxx  runSink.cxx  sampler.cxx  sink.cxx  test-ex-1-1.sh.in
examples/1-n-1/: CMakeLists.txt  Processor.cxx  Processor.h  README.md  Sampler.cxx  Sampler.h  Sink.cxx  Sink.h  fairmq-start-ex-1-n-1.sh.in  processor.cxx  runProcessor.cxx  runSampler.cxx  runSink.cxx  sampler.cxx  sink.cxx  test-ex-1-n-1.sh.in
examples/builtin-devices/: CMakeLists.txt  README.md  fairmq-start-ex-builtin-devices.sh.in  test-ex-builtin-devices.sh.in
examples/copypush/: CMakeLists.txt  README.md  Sampler.cxx  Sampler.h  Sink.cxx  Sink.h  fairmq-start-ex-copypush.sh.in  runSampler.cxx  runSink.cxx  sampler.cxx  sink.cxx  test-ex-copypush.sh.in
examples/custom-controller/: CMakeLists.txt  MyController.h  MyDevice.h  main.cxx
examples/dds/: CMakeLists.txt  Processor.cxx  Processor.h  README.md  Sampler.cxx  Sampler.h  Sink.cxx  Sink.h  ex-dds-hosts.cfg  ex-dds-topology-infinite.xml  ex-dds-topology.xml  fairmq-ex-dds-env.sh  fairmq-start-ex-dds.sh.in  processor.cxx  runProcessor.cxx  runSampler.cxx  runSink.cxx  sampler.cxx  sink.cxx
examples/multipart/: CMakeLists.txt  Header.h  README.md  Sampler.cxx  Sampler.h  Sink.cxx  Sink.h  ex-multipart-multiple-endpoints.json  fairmq-start-ex-multipart.sh.in  runSampler.cxx  runSink.cxx  sampler.cxx  sink.cxx  test-ex-multipart.sh.in
examples/multiple-channels/: Broadcaster.cxx  Broadcaster.h  CMakeLists.txt  README.md  Sampler.cxx  Sampler.h  Sink.cxx  Sink.h  broadcaster.cxx  fairmq-start-ex-multiple-channels.sh.in  runBroadcaster.cxx  runSampler.cxx  runSink.cxx  sampler.cxx  sink.cxx  test-ex-multiple-channels.sh.in
examples/multiple-transports/: CMakeLists.txt  README.md  Sampler1.cxx  Sampler1.h  Sampler2.cxx  Sampler2.h  Sink.cxx  Sink.h  fairmq-start-ex-multiple-transports.sh.in  runSampler1.cxx  runSampler2.cxx  runSink.cxx  sampler1.cxx  sampler2.cxx  sink.cxx  test-ex-multiple-transports.sh.in
examples/n-m/: CMakeLists.txt  Header.h  README.md  ex-n-m-pair-topology.xml  ex-n-m-topology.xml  fairmq-start-ex-n-m-dds.sh.in  fairmq-start-ex-n-m-pair-dds.sh.in  fairmq-start-ex-n-m-pair.sh.in  fairmq-start-ex-n-m.sh.in  receiver.cxx  runReceiver.cxx  runSender.cxx  runSynchronizer.cxx  sender.cxx  synchronizer.cxx
examples/qc/: CMakeLists.txt  README.md  ex-qc-topology.xml  fairmq-ex-qc-env.sh  fairmq-start-ex-qc.sh.in  qCDispatcher.cxx  qCTask.cxx  runQCConsumer.cxx  runQCDispatcher.cxx  runQCProducer.cxx  runQCTask.cxx  runSampler.cxx  runSink.cxx  sampler.cxx  sink.cxx
examples/readout/: Builder.h  CMakeLists.txt  Processor.h  README.md  Readout.h  Receiver.h  Sampler.cxx  Sampler.h  Sender.h  builder.cxx  fairmq-start-ex-readout-processing.sh.in  fairmq-start-ex-readout.sh.in  processor.cxx  readout.cxx  receiver.cxx  runBuilder.cxx  runProcessor.cxx  runReadout.cxx  runReceiver.cxx  runSender.cxx  runSink.cxx  sender.cxx
examples/region/: Builder.h  CMakeLists.txt  README.md  Sampler.cxx  Sampler.h  Sink.cxx  Sink.h  fairmq-start-ex-region-advanced-external.sh.in  fairmq-start-ex-region-advanced.sh.in  fairmq-start-ex-region-processing.sh.in  fairmq-start-ex-region.sh.in  keep-alive.cxx  processor.cxx  runBuilder.cxx  runSampler.cxx  runSink.cxx  sampler.cxx  sink.cxx  test-ex-region.sh.in
examples/req-rep/: CMakeLists.txt  Client.cxx  Client.h  README.md  Server.cxx  Server.h  client.cxx  fairmq-start-ex-req-rep.sh.in  runClient.cxx  runServer.cxx  server.cxx  test-ex-req-rep.sh.in
fairmq/: .clang-format  AUTHORS  Buffer.h  CMakeLists.txt  CONTRIBUTORS  Channel.cxx  Channel.h  Device.cxx  Device.h  DeviceRunner.cxx  DeviceRunner.h  Error.cxx  Error.h  EventManager.cxx  EventManager.h  FairMQBalancedStandaloneSplitter.cxx  FairMQBalancedStandaloneSplitter.h  FairMQBenchmarkSampler.cxx  FairMQBenchmarkSampler.h  FairMQBuffer.cxx  FairMQBuffer.h  FairMQChannel.cxx  FairMQChannel.h  FairMQConfigPlugin.h  FairMQConfigurable.cxx  FairMQConfigurable.h  FairMQContext.cxx  FairMQContext.h  FairMQControlPlugin.h  FairMQDevice.cxx  FairMQDevice.h  FairMQLogger.cxx  FairMQLogger.h  FairMQMerger.cxx  FairMQMerger.h  FairMQMessage.cxx  FairMQMessage.h  FairMQMessageNN.cxx  FairMQMessageNN.h  FairMQMessageZMQ.cxx  (+90 more)
fairmq/deployment/: CMakeLists.txt  FairMQDDSTools.h  runDDSCommandUI.cxx
fairmq/devices/: BaseDeserializationPolicy.h  BaseProcessorTaskPolicy.h  BaseSerializationPolicy.h  BaseSinkPolicy.h  BaseSourcePolicy.h  BenchmarkSampler.h  ExperimentalBenchmarkSampler.h  ExperimentalSink.h  FairMQBenchmarkSampler.cxx  FairMQBenchmarkSampler.h  FairMQBuffer.cxx  FairMQMerger.cxx  FairMQMerger.h  FairMQMultiplier.cxx  FairMQMultiplier.h  FairMQProxy.cxx  FairMQProxy.h  FairMQSink.cxx  FairMQSink.h  FairMQSplitter.cxx  FairMQSplitter.h  GenericFileSink.h  GenericFileSink.tpl  GenericMerger.h  GenericProcessor.h  GenericSampler.h  GenericSampler.tpl  Merger.h  Multiplier.h  Proxy.h  README.md  Sink.h  Splitter.h  runBenchmarkSampler.cxx  runMerger.cxx  runMultiplier.cxx  runProxy.cxx  runSink.cxx  runSplitter.cxx  startMQBenchmark.sh.in
fairmq/docs/: Configuration.md  Development.md  Device.md  Examples.md  Logging.md  Transport.md
fairmq/examples/: README.md
fairmq/logger/: CMakeLists.txt  fairroot_null_deleter.h  logger.cxx  logger.h  logger_def.h  logger_oldboost_version.cxx  logger_oldboost_version.h
fairmq/nanomsg/: FairMQMessageNN.cxx  FairMQMessageNN.h  FairMQPollerNN.cxx  FairMQPollerNN.h  FairMQRegionNN.cxx  FairMQRegionNN.h  FairMQSocketNN.cxx  FairMQSocketNN.h  runBenchmarkSampler.cxx  (+11 more)
(+6190 files in other folders)
